# concierge-db

./: .dockerignore  Cargo.toml  Dockerfile  Insomnia.json  LICENSE  Makefile  README.md
doc/: conciergedb_architecture.dot  query_result.jsonc
html/: 404.html  ascii_home.html  home.html
scripts/: build.sh  check.sh  database.sqlite3  deploy.sh  run.sh
src/: auth.rs  database.rs  in_memory_db.rs  main.rs  maintenance.rs  rust-toolchain  web_server.rs
src/api/: mod.rs
src/api/insert_row/: mod.rs  model.rs  presenter.rs  view.rs
src/api/maintenance_mode/: model.rs  presenter.rs  view.rs
src/api/query/: mod.rs  model.rs  view.rs
src/api/read_all/: model.rs  presenter.rs  view.rs
src/api/read_count/: mod.rs  model.rs  presenter.rs  view.rs
src/api/show_columns/: mod.rs  model.rs  presenter.rs  view.rs
src/api/show_tables/: mod.rs  model.rs  presenter.rs  view.rs
src/api/update_field/: model.rs  presenter.rs  view.rs
