[package]
name = 'concierge-db'
version = '0.3.0'
authors = ['Antonio Feitosa <antonio.cfc@gmail.com>']
edition = '2018'

[dependencies]
clap = '2.33.1'
tide = '0.9.0'
http-types = '2.0.1'
mime = '0.3.16'
r2d2 = '0.8.8'
r2d2_sqlite = '0.16.0'
femme = "2.1.0"
log = "0.4.8"

[dependencies.rusqlite]
features = ['bundled']
version = '0.23.1'

[dependencies.serde]
features = ['derive']
version = '1.0.110'

[dependencies.async-std]
version = '1.6.0'
features = ['attributes']

[dependencies.regex]
version = '1.3.8'
default-features = false
features = ['std']
