[package]
name = 'concierge-db'
version = '0.5.0'
authors = ['Antonio Feitosa <antonio.cfc@gmail.com>']
edition = '2018'

[dependencies]
clap = '2.33.1'
r2d2 = '0.8.8'
r2d2_sqlite = '0.16.0'
smol = '0.1.18'

[dependencies.rusqlite]
features = ['bundled']
version = '0.23.1'

[dependencies.serde]
features = ['derive']
version = '1.0.114'

[dependencies.brickpack]
version = '0.9'
# git = 'https://github.com/afsec/brickpack.git'
path = '../brickpack/'
