[package]
name = "concierge-db"
version = "0.9.7"
authors = ["Antonio Feitosa <antonio.cfc@gmail.com>"]
edition = "2018"


[dependencies]
brickpack = { version = '0.9.7', git = 'https://github.com/afsec/brickpack/', branch = "main" }
brickpack_derive = { version = '0.9.7', git = 'https://github.com/afsec/brickpack/', branch = "main" }

# brickpack = { path = '/home/user/src/brickpack/brickpack/'}
# brickpack_derive = { path = '/home/user/src/brickpack/brickpack_derive/'}

tide = "0.15.0"
clap = "2.33.3"
serde_json = "1.0.60"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"

[dependencies.rusqlite]
features = ['bundled','column_decltype']
version = '0.24.2'

[dependencies.serde]
features = ['derive']
version = '1.0.118'

[dependencies.async-std]
features = ['attributes']
version = '1.7.0'
